--- a/FlightDiary/flightdiary/src/main/AndroidManifest.xml
+++ b/FlightDiary/flightdiary/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
-            >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,12 +37,12 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-
-
-        <activity android:name=".AddActivity"
-            android:label="Add">
-
-
+        <activity
+            android:name=".AddActivity"
+            android:label="Add"></activity>
+        <activity android:name=".ImageAddActivity"
+            android:label="Add Image"
+            >
         </activity>
     </application>
 
